BOARD18 2.7.5 Release Notes
 
Changes from 2.7.4 Release:
Implemented fix for Issue 229 - Add key to the game_player table.
Fixed clean function in emailPlayer.php.
Fixed comment in sendEmail.php

BOARD18 2.7.4 Release Notes
 
Changes from 2.7.3 Release:
Implemented fix for Issue 200 - Fix the second copy of access-denied.html.
Removed the "require_once('tempRandom.php')" line from emailPassword.php.

BOARD18 2.7.3 Release Notes
 
Changes from 2.7.2 Release:
Implemented fix for Issue 195 - Field size discrepancy in board18Players.php.
Implemented fix for Issue 197 - Invalid return code from checkForUpdate.
Make some minor corrections to code in board18Map7.js and board18Market7.js.
Make some minor corrections to code in checkForUpdate.php.

BOARD18 2.7.1 Release Notes
 
Changes from 2.7.0 Release:
Implemented fix for Issue 198 - Enhance PHP error logging - part 6

BOARD18 2.7.0 Release Notes
 
Changes from 2.6.9 Release:
Implemented fix for Issue 192 - Enhance PHP error logging - part 5
Implemented fix for Issue 193 - Field size discrepancy in board18Games.php
Implemented fix for Issue 196 - Actions fail (404) in long-running tab 
Remove unused <script> link from board18Map.php

BOARD18 2.6.9 Release Notes
 
Changes from 2.6.8 Release:
Implemented fix for Issue 190 - Enhance PHP error logging - part 4
Implemented fix for Issue 191 - Last player error when making new game

BOARD18 2.6.8 Release Notes
 
Changes from 2.6.7 Release:
Implemented fix for Issue 185 - Enhance PHP error logging part 3
Implemented fix for Issue 183 - Redesign layout of board18Misc page
Delete some unused jQuery Migration files

BOARD18 2.6.7 Release Notes
 
Changes from 2.6.6 Release:
Implemented fix for Issue 167 - Redesign layout of New Game page

BOARD18 2.6.6 Release Notes
 
Changes from 2.6.5 Release:
Implemented fix for Issue 170 - Upgrade jQuery to current version 

BOARD18 2.6.5 Release Notes
 
Changes from 2.6.4 Release: