@@ -217,6 +217,12 @@ A copy of this license can be found in the LICENSE.text file.
               <label class="error" for="lname" id="lname_error">
                 This field is required.</label>
             </p>
+            <p>
+              <input type="submit" name="regbutton" class="pwbutton"  
+                     id="button2" value="Register" >
+              <input type="button" name="canbutton" class="pwbutton"  
+                     id="button3" value="Cancel" >              
+            </p>
           </fieldset>
         </form>
       </div> 
